CB-34184 Implement LB deletion flow and CNAME DNS record update
Implement flow to be able to delete the FreeIPA's load balancer. This is flow will be used in the Azure implementation of the FreeIPA multi-AZ migration operation, to be able to recreate the load balancer to make it zone-redundant. The flow does the following things:
- Update the CNAME DNS records of kdc, kerberos and ldap to no longer point to the load balancer but instead to the ipa-ca CNAME; delete the load balancer's A record and deregister the load balancer in PEM
- Delete the load balancer cloud provider resource

This commit also implements the CNAME DNS record update by updating the FreeIpaClient to be able use the dnsrecord_mod command for CNAME records.
Also updated the DnsRecordService to use this new updateDnsCnameRecord method instead of deleting and recreating records to update them.
Also renamed the addDnsCnameRecord method to addOrUpdateDnsCnameRecord so that it correctly represents what it has already been doing even before this change.